src/styles.css
body {
  color: '#000000';
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  max-width: 1800px;
  background-color: #ffffff;
  padding: 50px;
  height: 100%;
  margin: auto;
  align-items: center;
  vertical-align: middle;
}

*:focus {
  outline: none !important;
}

* {
  box-sizing: border-box;
  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.main {
  width: 100%;
  height: 100%;
  display: table;
}

.title {
  color: black;
}

svg {
  font-family: none !important;
}

.Dropzone-img {
  max-width: calc(100vw - 60px);
  max-height: calc(100vw - 60px);
  width: 640px;
  height: 640px;
  border: thin solid rgba(0, 0, 0, 0.15);
  border-radius: 4px;
  object-fit: cover;
}

.Dropzone {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  background: transparent;
  max-width: calc(100vw - 40px);
  max-height: calc(100vw - 40px);
  width: 660px;
  height: 660px;
  border-radius: 0px;
  position: relative;
}

.Dropzone-page {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  /* background-image: url('/img/4.png'); */
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.prediction {
  max-width: calc(100vw - 40px);
  width: 320;
  height: 320;
  display: flex;
  justify-content: space-between;
  padding: 10px 10px 0 10px;
}

.landing {
  background-color: white;
  vertical-align: middle;
  display: table-cell;
}

#landing_card {
  background-color: white;
  height: 100%;
}

#top_part {
  background-color: white;
  margin: 20px 0;
}

#home_icon {
  background-color: white;
}

#home_icon > * {
  background-color: white;
  width: 360px;
}

#landing_card_left_half {
  display: grid;
  height: 100%;
  width: calc(100% - 700px);
  float: left;
  background-color: white;
}

.landing_card_title_group {
  width: 100%;
}

#landing_card_title {
  font-size: xx-large;
  line-height: xx-large;
  padding:0;
  margin: 0;
}

#landing_card_subtitle {
  font-size: small;
}

#landing_card_description {
  width: 60%;
  line-height: small;
  padding:0;
  margin:20px 0;
  font-weight: 300;
}

#landing_card_right_half {
  width: 700px;
  float: right;
  background-color: white;
}

#canvas {
  position: absolute;
  top: 10px;
  bottom: 10px;
  left: 10px;
  right: 10px;
  border: solid black 2px;
}


#cta {
  color: white;
  background-color: black;
  padding: 20px;
}

#gmbf_logo {
  width: 256px;
}

.image_row {
  height: 49%;
}

.image_in_square > *{
  width: 49%;
}

.img_desc {
  border: solid black 2px;
  padding: 3px 10px;
  margin: 0 0 5px;
  font-weight: 300;
  max-width: 660px;
}
@media only screen and (max-width: 1200px) {
  #top_part {
    margin: 0;
    align-items: center;
    padding: 0 20px;
    text-align: center;
  }
  #landing_card_description {
    width: 100%;
  }
}
@media only screen and (max-width: 1079px) {
  .Dropzone {
    margin-bottom: 5px;
  }
  #home_icon > img {
    max-width: 600px;
  }

  #canvas {
    position: absolute;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
  }

  #landing_card_right_half {
    float:none;
    width: 100%;
    padding: 0 0 90px 0;
    display:block;
  }
  
  #landing_card_title {
    text-align: center;
  }

  #landing_card_description {
    text-align: center;
    width: auto;
    padding: 0 15px;
  }

  #landing_card_left_half {
    float:none;
    width: 100%;
    padding: 0;
    display:block;
  }

  .Dropzone-page {
    margin: 0px;
  }
  body {
    padding-top: 50px;
    background-color: white;
    padding-left: 0;
    padding-right: 0;
  }

  #home_icon > * {
    width: 100%;
  }
  
  .landing_card_title_group {
    padding: 0 10px 10px;
  }

  .img_desc {
    max-width: 660px;
    margin: 0 calc((100vw - 660px)/2) 5px;
  }
}

